--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-ace": "^12.0.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
